assets/css/style.css
/* ---------------------------------------- FONTS */

@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed|Exo|Halant|Roboto:100,200,300,400,500,600,700,800,900&display=swap');

body, h1, h2, h3, h4 {
    font-weight: 600;
}

nav .btn {
    font-weight: 600;
}

.text-uppercase {
    text-transform: uppercase;
}
.white-font {
    color: rgba(255, 255, 255, 1);

}
section {
    font-family: "Barlow condensed", "Roboto", sans-serif;
    color: rgba(255, 255, 255, 1);
}

h1, h2, h3 {
    letter-spacing: 6px;
}

h4 {
    font-size: 1.2rem;
    letter-spacing: 2.6px;
}

.timeline-item h4 { /* Tour page */
    font-weight: 900; 
}

.message-alert {
    font-size: 0.8rem;
    color: rgba(255, 255, 255, 0.6);
}

.yellow-font {
    color: #ffd600;
}
/* ---------------------------------------- BACKGROUND IMAGE AND BACKGROUND SIZE*/

.monkees-bg {
    background: url("../images/monkees-together.gif");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center 26%;
    /* background-attachment: fixed; */
    background-repeat: no-repeat;
    height: 300px;
    position: relative;
}

.dark-bg {
    /* Found how to darker the bg-img through this link https://stackoverflow.com/questions/26621513/darken-css-background-image */
    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../images/dark-background.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.main-container {
    height: calc(100vh - 111px);
    margin-top: 58px;
    overflow: auto;
}

/* ---------------------------------------- BUTTONS */

/* NAVBAR BUTTONS */

.navbar-toggler {
    border: 0;
}

/*  PAGES BUTTONS */

.btn-font {
    color: rgba(255,255,255,.5);
}

.btn-font:hover {
    color: rgba(255,255,255, .75);
}

/* ---------------------------------------- HEADERS */

.navbar-dark .navbar-nav .nav-link.current {
    color: rgba(255,255,255, 1);
}

/* Hover underline added to have a better UX. */

.underline-hover>a {
    position: relative; /* position changed for the underline position */
}

.underline-hover>a:after {
    content: "";
    display: block;
    height: 2px;
    left: 50%;
    position: absolute;
    background: #fff;
    transition: width 0.3s ease 0s, left 0.3s ease 0s;
    width: 0;
}

.underline-hover>a:hover:after {
    width: 100%;
    left: 0;
}

/* ---------------------------------------- SECTION */

/* Top and Bottom Space Title All Page */
.main-title {
    margin-top: 20px;
    margin-bottom: 38px;
}

/*  Block Divider Line */

.block-divider {
    height: 5px;
    background-color: #f4f4f4;
    width: 35px;
    border: 0;
}
/* ---------------------  VIDEO PAGE */

/* ---- VIDEO PART */

.video-responsive {
    overflow: hidden;
    padding-bottom: 56.25%;
    position: relative;
    height: 0;
    margin-bottom: 15px;
    margin-top: 15px;
}

.video-responsive iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

/* Button space in the column in the video page*/
/* Need space at the bottom */
.button-column {
    margin-bottom: 38px;
    border-radius: 5px;
}
/* Need little bit space on the top of the message */
.first-video-container .button-column {
    padding-top: .5rem;
}

/* --------------------- Music PAGE */

/* Column Audio Space */

.col-audio {
    margin-bottom: 50px;
}

/* Music Image Title Space */

.music-content h4 {
    margin-top: 15px;
    margin-bottom: 15px;
}

/* ---- Audio Player */
/* Size and Space */
.music-player {
    width: 85%;
    margin-top: 15px;
}
/* Images */
/* All the img */
.img-cover {
    height: 225px;
    width: 224px;
    /* Images was too bright */
    opacity: .95;
}

/* ---- Buttons */
/* Space between content and Style */

.music-content .btn{
    margin-top: 15px;
    border-radius: 25px;
}

/* Spotify Playlist Width */

.spotify-width {
    width: 100%;
}
/*---- Modals */
/* Remove the visible border */

.modal-content {
    background-color: #343a40; /* Remove the white border on the left and right corner */
}

.no-top-border {
    border-top: 0;
}

.no-bottom-border {
    border-bottom: 0;
}

/* --------------------- Tour PAGE */

.date-content {
    margin-bottom: 30px;
}

.timeline-item p {
    margin: 0;
    padding: 0;
}

.timeline-item {
    padding: 4em 2em 0em 2em;
    position: relative;
    color: #fafafa;
}

.timeline-item:before {
    content: attr(data-dates);
    position:absolute;
    left: 2em;
    top: 2em;
    display: block;
    font-weight: 500;
    padding: 0;
    margin: 0;
    background: #e20000;
}

.timeline-item:after {
    content: '';
    width: 12px;
    height: 12px;
    display: block;
    top: 2.4em;
    left: -6px;
    border-radius: 12px;
    position: absolute;
    background-color: white;
}

.border-left-white {
    color: #fafafa;
    border-left: 1px solid;
    padding-left: 0;
}

.margin-top {
    margin-top: 36px;
}

table .message-alert {
    position: absolute;
}

/* ---------------------------------------- FOOTER */

footer {
    height: 53px;
}

/* SOCIAL ICON space between them*/

.social-icon {
    margin: 15px;
}

/* ---------------------------------------- ICON FONT AWESOME */

/* ICON in the title remove pointer cause of fa hover */

.icon-title {
    /* Give some space between the icon and the title */
    /* margin-right: 5px; */ 
    /* Should I keep this or remove it using only a space in the title? */
}

/*------ ICONS Footer */

footer .fa {
    color: #f4f4f4;
    transition: all .2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    /* Firefox */
    -webkit-transition: all 0.2s ease-in-out;
    /* Safari & Chrome */
    -o-transition: all 0.2s ease-in-out;
    /* Opera */
    -ms-transition: all 0.2s ease-in-out;
    /* Internet Explorer */
}

/* Hover added to add a better UX.*/

footer .fa:hover {
    transform: scale(1.3);
}

.fa-facebook-square:hover {
    color: #3b5998;
}

.fa-twitter:hover {
    color: #1da1f2;
}

.fa-youtube:hover {
    color: #e31010;
}

.fa-spotify:hover {
    color: #1DB954;
}

/*---------------------- SHADOW EFFECTS ICON*/

/* ICON in the footer */

.icon-shadow {
    text-shadow: 5px 5px rgba(0, 0, 0, 0.4);
}

/* ---------------------------------------- MEDIA QUERIES */

@media screen and (min-width: 576px) {
    .spotify-width {
        width: 380px;
    }
}

/* Tablet and more */
@media screen and (min-width: 768px) {
    /* Video Page */
    /* Need little bit space on the top */
    .second-video-container .button-column, .third-video-container .button-column {
        padding-top: .5rem;
    }

    /* Music Page */

    /* #album-message {
        display: flex;
        align-items: center;
        justify-content: center;
    } */

    /* Tour Page */
}

}

/* Desktop and Full Screen */
@media screen and (min-width: 992px) {
    /* Video Page */
    /* Reducing the size of the youtube video */
    .video-responsive {
        padding-bottom: 35%;
    }
    
    /* Tour Page */
    
}

/* ---------------------------------------- check the borders of the grid */

 
/*nav {*/
/*    border: 1px solid red;*/
/*}*/

/*div {*/
/*    border: 1px solid green;*/
/*}*/

/*ul {*/
/*    border: 1px solid yellow;*/
/*}*/

/*li {*/
/*    border: 1px dotted blue;*/
/*}*/

/*a {*/
/*    border: 1px dotted white;*/
/*}*/

/*i {*/
/*    border: 1px solid black;*/
/*} */

/*.timeline-item {*/
/*    border: 1px solid red;*/
/*}*/

